quelques modifs getCode et logger